4.test-ns+pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: dev
